syntax = "proto3";

package user;

option go_package = "github.com/rpc-framework/core/proto/user";

// UserService 用户服务
service UserService {
  // CreateUser 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // GetUser 查询用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // ListUsers 查询用户列表
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  
  // UpdateUser 更新用户
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // DeleteUser 删除用户
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

// User 用户信息
message User {
  int64  id       = 1;
  string username = 2;
  string email    = 3;
  string phone    = 4;
  int32  age      = 5;
  string address  = 6;
  int64  created_at = 7;
  int64  updated_at = 8;
}

// CreateUserRequest 创建用户请求
message CreateUserRequest {
  string username = 1;
  string email    = 2;
  string phone    = 3;
  int32  age      = 4;
  string address  = 5;
}

// CreateUserResponse 创建用户响应
message CreateUserResponse {
  User   user = 1;
  string message = 2;
}

// GetUserRequest 查询用户请求
message GetUserRequest {
  int64 user_id = 1;
}

// GetUserResponse 查询用户响应
message GetUserResponse {
  User   user = 1;
  string message = 2;
}

// ListUsersRequest 查询用户列表请求
message ListUsersRequest {
  int32 page     = 1;
  int32 page_size = 2;
  string keyword = 3;
}

// ListUsersResponse 查询用户列表响应
message ListUsersResponse {
  repeated User users = 1;
  int32        total = 2;
  int32        page  = 3;
  int32        page_size = 4;
  string       message = 5;
}

// UpdateUserRequest 更新用户请求
message UpdateUserRequest {
  int64  user_id = 1;
  string username = 2;
  string email    = 3;
  string phone    = 4;
  int32  age      = 5;
  string address  = 6;
}

// UpdateUserResponse 更新用户响应
message UpdateUserResponse {
  User   user = 1;
  string message = 2;
}

// DeleteUserRequest 删除用户请求
message DeleteUserRequest {
  int64 user_id = 1;
}

// DeleteUserResponse 删除用户响应
message DeleteUserResponse {
  bool   success = 1;
  string message = 2;
}
